UCF-APR2.4/ftr main/force-app/main/default/objects/Out_of_Office__c/Out_of_Office__c.object-meta.xml
<CustomObject>
    <label>Out of Office</label>
    <nameField>
        <label>Out of Office Message</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Out of Office</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>