UCF-APR2.4/ftr main/force-app/main/default/objects/Out_of_Office__c/fields/Activate__c.field-meta.xml
<CustomField>
    <fullName>Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate</label>
    <type>Checkbox</type>
</CustomField>