UCF-APR2.4/ftr main/force-app/main/default/objects/Out_of_Office__c/fields/Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Out_of_Office1</relationshipName>
    <type>Lookup</type>
</CustomField>