UCF-APR2.4/ftr main/force-app/main/default/objects/Out_of_Office__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( 
    AND( 
	Activate__c = true ,
	( End_Date__c  &gt;=  TODAY() ), 
	( Start_Date__c  &lt;=  TODAY() )								
	)  , 
true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>