UCF-APR2.4/ftr main/force-app/main/default/objects/Out_of_Office__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Out_of_Office</relationshipName>
    <type>Lookup</type>
</CustomField>